--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "~/*": ["./src/*"]
-      }
-    }
+      "module": "commonjs",
+      "target": "ES6",
+      "baseUrl": "./src"
+    },
+    "exclude": ["node_modules"],
+    "include": ["./src/**/*"]
   }
